[tool.poetry]
name = "bobux-economy"
version = "0.8.1"
description = ""
authors = ["arm32x <arm32.x@gmail.com>"]
license = "GPL-3.0-only"
# readme = "README.md"
packages = [{include = "bobux_economy"}]
include = ["data/changelog.txt"]

[tool.poetry.dependencies]
disnake = "^2.6.0"
python = "^3.9"
yoyo-migrations = "^7.3.2"
aiosqlite = "^0.17.0"
apscheduler = {extras = ["sqlalchemy"], version = "^3.9.1.post1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
